tests/NormalTests/paczka1/small_fuzzy/83623625.err
Error in line 3: cM1n0h3dfw S536 n5,2
Error in line 6: S679 S679 20,81
Error in line 7: 1zcPEB S536 13,15
Error in line 4: cM1n0h3dfw S536 111,3
Error in line 11: S679 S849 46,4
